2003-11-08  Oliver Schwartz <Oliver.Schwartz@gmx.de>

	* backend/snapscan-scsi.c backend/snapscan.c doc/descriptions/snapscan.desc:
	  Final bugfixes for Epson 1670

2003-11-07  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* README.openbsd: Added info about setting permissions (Bug #300311).
	* doc/descriptions/unsupported.desc: Added Genius and Lexmark scanners.

2003-11-07  Oliver Schirrmeister <oschirr@abm.de>

	* backend/fujitsu.c: Bugfix. If a scanner returned a color image
	  in format rr...r gg.g bb...b the reader process crashed.
	* backend/fujitsu.[ch] Bugfix. The option gamma was enabled for
	  the fi-4120. The result was an 'invalid field in parm list'-error.
	* doc/descriptions/fujitsu.desc: added model "fi-4530C"

2003-11-06  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc: Added Microtek and Visioneer
	  scanners.

2003-11-04  m. allan noah <anoah at pfeiffer dot edu>
	* doc/descriptions/fujitsu.desc: added model "fi-4110EOX2"

2003-11-04  Gerhard Jaeger <gerhard@gjaeger.de>
	* backend/Makefile.in: Linking coolscan now against sanei_thread lib.
	* backend/coolscan.c backend/coolscan.h: Switch backend over to
	  sanei_thread usage, to make it work at least with OS/2.
	* backend/plustek-pp_misc.c backend/plustek-pp_hwdefs.h: Fixed bug
	  in parport setup routine.
	* sanei/sanei_pp.c: Fixed problem in sanei_pp_setmode().
	  Fixed parport mode setting in direct mode.

2003-11-02  Julien Blache <jb@jblache.org>
	* frontend/saned.c: fixed endianness issues in
	check_v{4,6}_in_range(), also fixed portability issues to other
	UNIX platforms due to different representations of IPv6 addresses.

2003-11-02  Gerhard Jaeger <gerhard@gjaeger.de>
	* doc/descriptions/unsupported.desc: Added Plustek OpticSlim 2400.
	* include/sanei/sanei_thread.h: Removed OS/2 porting section.
	* sanei/sanei_pp.c include/sanei/sanei_pp.h:
	  Fixed udelay stuff, documentation update.
